# equation_system

./: .gitmodules  CMakeLists.txt  Readme.md
3pp/: CMakeLists.txt
source/: CMakeLists.txt  Constant.hpp  DataTypes.hpp  Expression.hpp  NameExpressionAnalyzer.hpp  NameSet.hpp  Term.hpp  TermVisitor.hpp  Variable.hpp  fwdVisitableTerms.hpp
source/src/: Constant.cpp  Expression.cpp  NameExpressionAnalyzer.cpp  Term.cpp  Variable.cpp
source/test/: Constant_test.cpp  ExpressionBuilder.cpp  ExpressionBuilder.hpp  Expression_test.cpp  Term_test.cpp  VariableBuilder.cpp  VariableBuilder.hpp  Variable_test.cpp
